# alt-shared-library

./: CMakeLists.txt  INSTALL.md  README.md  install.sh  main  main.cpp  main.h
examples/: CMakeLists.txt  compare_and_print.cpp  compare_and_save.cpp  main.cpp
include/PLcomparer/: PLcomparer.h
include/pl-comparer/: pl-comparer.h
src/: PLcomparer.cpp  libPLcomparer.cpp  pl-comparer-lib.cpp  pl-comparer.cpp
tests/: CMakeLists.txt  test.cpp
